Complete DTO
Complete DTO Implementation