@@ -10,7 +10,6 @@ import jakarta.transaction.Transactional;
 import jakarta.ws.rs.WebApplicationException;
 import jakarta.ws.rs.core.Response;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class PianoServiceImpl implements PianoService {
@@ -19,56 +18,56 @@ public class PianoServiceImpl implements PianoService {
     PianoRepository pianoRepository;
 
     @Override
+    @Transactional
+    public PianoResponseDTO create(PianoDTO dto) {
+        Piano novoPiano = new Piano();
+        novoPiano.setModelo(dto.modelo());
+        novoPiano.setFabricante(dto.fabricante());
+        novoPiano.setNumerodeteclas(dto.numeroDeTeclas());
+        novoPiano.setPossuipedais(dto.possuiPedais());
+        novoPiano.setMaterial(dto.material());
+        novoPiano.setTipo(dto.tipo());
+
+        pianoRepository.persist(novoPiano);
+        return PianoResponseDTO.valueOf(novoPiano);
+    }
+
+    @Override
+    @Transactional
+    public void update(long id, PianoDTO piano) {
+        Piano edicaoPiano = pianoRepository.findById(id);
+        if (piano == null) {
+            throw new WebApplicationException("Piano não encontrado", Response.Status.NOT_FOUND);
+        }
+        edicaoPiano.setModelo(piano.modelo());
+        edicaoPiano.setFabricante(piano.fabricante());
+        edicaoPiano.setNumerodeteclas(piano.numeroDeTeclas());
+        edicaoPiano.setPossuipedais(piano.possuiPedais());
+        edicaoPiano.setMaterial(piano.material());
+        edicaoPiano.setTipo(piano.tipo());    }
+
+    @Override
+    @Transactional
+    public void delete(long id) {
+        pianoRepository.deleteById(id);
+
+    }
+
+    @Override
     public List<PianoResponseDTO> listarTodos() {
         return pianoRepository.findAll().stream()
                 .map(p -> PianoResponseDTO.valueOf(p)).toList();
     }
 
-    public PianoResponseDTO buscarPorId(Long id) {
-        Piano piano = pianoRepository.findById(id);
-        if (piano == null) {
-            throw new WebApplicationException("Piano não encontrado", Response.Status.NOT_FOUND);
-        }
-        return PianoResponseDTO.fromEntity(piano);
+    @Override
+    public PianoResponseDTO buscarPorId(long id) {
+        return PianoResponseDTO.valueOf(pianoRepository.findById(id));
     }
 
-    @Transactional
-    public PianoResponseDTO criarPiano(PianoDTO dto) {
-        Piano piano = dto.toEntity();
-        pianoRepository.persist(piano);
-        return PianoResponseDTO.fromEntity(piano);
-    }
-
-    @Transactional
-    public PianoResponseDTO atualizarPiano(Long id, PianoDTO dto) {
-        Piano piano = pianoRepository.findById(id);
-        if (piano == null) {
-            throw new WebApplicationException("Piano não encontrado", Response.Status.NOT_FOUND);
-        }
-        piano.modelo = dto.modelo();
-        piano.fabricante = dto.fabricante();
-        piano.numeroDeTeclas = dto.numeroDeTeclas();
-        piano.possuiPedais = dto.possuiPedais();
-        piano.material = dto.material();
-        piano.tipo = dto.tipo();
 
 
-        return PianoResponseDTO.fromEntity(piano);
-    }
-
-    @Transactional
-    public void deletarPiano(Long id) {
-        Piano piano = pianoRepository.findById(id);
-        if (piano != null) {
-            pianoRepository.delete(piano);
-        } else {
-            throw new WebApplicationException("Piano não encontrado", Response.Status.NOT_FOUND);
-        }
-    }
-
+    @Override
     public List<PianoResponseDTO> buscarPorFabricante(String fabricante) {
-        return pianoRepository.buscarPorFabricante(fabricante).stream()
-                .map(PianoResponseDTO::fromEntity)
-                .collect(Collectors.toList());
+        return pianoRepository.findAll().stream().map(p -> PianoResponseDTO.valueOf(p)).toList();
     }
 }
